--- a/main.css
+++ b/main.css
@@ -5,19 +5,36 @@ body {
 
 #page {
     display: flex;
+    flex-direction: unset;
     flex-flow: column;
     width: 100%;
     height: 100%;
 }
 
 #introduction {
-    padding: 1vw;
+    display: flex;
+    justify-content: space-between;
     background-color: white;
+    padding-right: 1vh;
     border: 2px;
     border-style: solid;
     border-color: rgb(85, 85, 240);
     border-radius: 1vw;
     margin-bottom: 1vh;
+}
+
+#name-introduction {
+    padding-left: 1vw;
+    padding-right: 1vw;
+}
+
+
+img {
+    flex-flow: nowrap;
+    float: right;
+    padding: 0vw;
+    padding-top: 1vh;
+    padding-right: 1vw;
 }
 
 .column { 
@@ -45,6 +62,7 @@ body {
 }
 
 #all-details {
+    display: block;
     padding: 1vw;
     background-color: white;
     border: 2px;
@@ -52,7 +70,7 @@ body {
     border-color: rgb(85, 85, 240);
     margin-top: 1vh;
     margin-bottom: 1vh;
-    height: 61vh;
+    height: 70%;
 }
 
 .details-header {
@@ -67,12 +85,13 @@ body {
 }
 
 #specific-details {
+    display: block;
     padding: 1vw;
     background-color: white;
     border: 2px;
     border-style: solid;
     border-color: rgb(85, 85, 240);
-    height: 15vh;
+    height: 15%;
 }
 
 #specific-details-name{
@@ -81,6 +100,8 @@ body {
 }
 
 #buttons {
+    display: flex;
+    flex-direction: column;
     padding: 1vw;
     padding-left: 4vw;
     padding-right: 4vw;
@@ -94,19 +115,25 @@ body {
 }
 
 .button-link { 
-
     text-decoration: none;
 }
 
-.button {
-    color: white;
-    text-align: center;
-    list-style: none;
+button {
+	background: linear-gradient(to bottom, #60dff0 5%, #408c99 100%);
     background-color: turquoise;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    padding-left: 4vw;
-    padding-right: 4vw;
     border-radius: 1vw;
-    margin-bottom: 5vh;
+    display: inline-block;
+    border: none;
+    padding: 2vh 4vw;
+	cursor: pointer;
+    color: white;
+    font-size: 16px;
+    font-weight:bold;
+    margin-bottom: 1vh;
 }
+
+button:hover {
+	background:linear-gradient(to bottom, #408c99 5%, #60dff0 100%);
+	background-color:#408c99;
+}
+
