feat(Main.html, Main.css): finish exrcise

--- a/main.css
+++ b/main.css
@@ -100,7 +100,10 @@ img {
 }
 
 #buttons {
+  
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     padding: 1vw;
     padding-left: 4vw;
