--- a/Exercise2/Main.css
+++ b/Exercise2/Main.css
@@ -77,6 +77,8 @@ body {
 }
 
 .details {
+    display: flex;
+    flex-direction: column;
     padding: 1vw;
     padding-left: 4vw;
     padding-right: 4vw;
@@ -98,7 +100,7 @@ body {
     border-color: rgb(85, 85, 240);
     margin-top: 1vh;
     margin-bottom: 1vh;
-    height: 70%;
+    height: 65%;
 }
 
 .detailsHeader {
@@ -119,7 +121,7 @@ body {
     border: 2px;
     border-style: solid;
     border-color: rgb(85, 85, 240);
-    height: 15%;
+    height: 20%;
 }
 
 .specificDetailsName{
