--- a/Exercise3/Main.css
+++ b/Exercise3/Main.css
@@ -3,6 +3,10 @@ body {
     background-color: rgb(123, 221, 221);
 }
 
+button {
+    cursor: pointer;
+}
+
 .page {
     display: flex;
     flex-direction: unset;
@@ -45,7 +49,6 @@ body {
 	background-color: #3d94f6;
 	border-radius: 6px;
 	border: 1px solid #337fed;
-	cursor: pointer;
 	color: white;
 	font-size: 15px;
 	font-weight: bold;
@@ -155,11 +158,11 @@ body {
     width: 18vw;
     height: 9vh;
     padding: 2vh 4vw;
-	cursor: pointer;
     color: white;
     font-size: 16px;
     font-weight:bold;
     margin-bottom: 1vh;
+    border: 1px solid gainsboro;
 }   
 
 .sideBarButton:hover {
@@ -169,13 +172,21 @@ body {
     box-shadow: black 0px 0px 3px;
 }
 
+.animalTableBox {
+    display: flex;
+    flex-direction: column;
+}
+
 .animalTable {
     width: 80%;
+    margin-top: 2vh;
+    margin-right: 5vw;
     border: 1px solid black;
     border-collapse: collapse; 
 }
 
 .animalTableCell {
+    position: relative;
     padding: 2vh;
 }
 
@@ -192,10 +203,6 @@ body {
     height: 27px;
 }
 
-.animalTableCell {
-    position: relative;
-}
-
 tr.removedRow .animalTableCell::before {
     content: " ";
     position: absolute;
@@ -203,4 +210,27 @@ tr.removedRow .animalTableCell::before {
     left: 0;
     border-bottom: 2px solid tomato;
     width: 100%;
+}
+
+.saveAnimalButton {
+    margin: 2vh;
+    margin-right: 8vw;
+    width: 8vw;
+    height: 4vh;
+	background: black;
+	border-radius: 3px;
+	border: 1px solid #000000;
+	color: white;
+	font-size: 14px;
+	font-weight: bold;
+}
+
+.saveAnimalButton:hover:enabled {
+    box-shadow: black 0px 0px 3px;
+}
+
+.saveAnimalButton:disabled {
+    border: none;
+    font-size: 90%;
+    background-color: rgb(192, 187, 187);
 }
