--- a/Exercise3/Main.css
+++ b/Exercise3/Main.css
@@ -181,13 +181,35 @@ button {
     width: 80%;
     margin-top: 2vh;
     margin-right: 5vw;
-    border: 1px solid black;
     border-collapse: collapse; 
+}
+
+.animalTableProperty {
+    padding: 1vw;
+    border: 1px solid black;
+    background-color: rgb(255, 209, 255);
+}
+
+.animalTableRow {
+    border: 1px solid black;
+    background-color: rgb(255, 231, 255);
 }
 
 .animalTableCell {
     position: relative;
     padding: 2vh;
+}
+
+.animalGarbageCell {
+    padding: 2vh;   
+    background-color: white;
+    border: none;
+}
+
+.animalTableRow:hover {
+    cursor: pointer;
+    background-color: lightblue;
+    box-shadow: black 0px 0px 5px;
 }
 
 .garbageIcon {
@@ -198,9 +220,10 @@ button {
 
 .garbageIcon:hover {
     border-radius: 50%;
-    box-shadow: black 0px 0px 5px;
-    width: 27px;
-    height: 27px;
+    box-shadow: red 0px 0px 5px;
+    border: 1px solid black;
+    width: 25px;
+    height: 25px;
 }
 
 tr.removedRow .animalTableCell::before {
