--- a/Exercise3/Main.css
+++ b/Exercise3/Main.css
@@ -11,6 +11,10 @@ button {
     display: none;
 }
 
+.pointed {
+    cursor: pointer;
+}
+
 .page {
     display: flex;
     flex-direction: unset;
@@ -261,4 +265,33 @@ tr.removedRow .animalTableCell::before {
     border: none;
     font-size: 90%;
     background-color: rgb(192, 187, 187);
+}
+
+.inputProperty {
+    padding: 1vh;
+}
+
+.inputPropertyBox {
+    width: 25%;
+    padding: 1vh 2vw;
+    margin: 0vh 2vw;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+.inputPropertySubmit {
+    width: 12%;
+    background-color: rgb(107, 135, 172);
+    color: white;
+    padding: 1vh 2vw;
+    margin: 0vh 2vw;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+  
+.inputPropertySubmit:hover {
+    background-color: #457ba0;
 }
