--- a/Basic HTML/Exercise3/Main.css
+++ b/Basic HTML/Exercise3/Main.css
@@ -15,6 +15,23 @@ button {
     cursor: pointer;
 }
 
+/* scrollBar design */
+::-webkit-scrollbar {
+    width: 10px;
+}
+  
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+}
+   
+::-webkit-scrollbar-thumb {
+    background: #888; 
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+
 .page {
     display: flex;
     flex-direction: unset;
@@ -104,6 +121,7 @@ button {
 }
 
 .allDetailsScreen {
+    overflow-y: auto;
     display: block;
     padding: 1vw;
     background-color: white;
